# ionicluster

./: LICENCE  README.md  pyproject.toml
ionicluster/: __init__.py  clustering.py  io_utils.py  structural.py
ionicluster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paper_examples/OPES/: README.md  nb_test.py  rdf_test.py
paper_examples/OPES/chi_0.01_nion_72/: in.p.run_md  run_2.data
paper_examples/infRETIS/: README.md  cut_water.py  nb_list_test.py  rdf_test.py  rg_hist_cl_size_test.py
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/: infretis.toml  orderp.py
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/lammps_input/: lammps.input
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/load/0/: energy.txt  order.txt  traj.txt
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/load/0/accepted/: 000_230547_2209_trajB.lammpstrj  second.lammpstrj
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/load/1/: energy.txt  order.txt  traj.txt
paper_examples/infRETIS/chi_0.01_nion_72_cac_OP/load/1/accepted/: 007_230545_2089_trajB.lammpstrj  007_230545_2090_trajF.lammpstrj  007_230545_2091_trajB.lammpstrj  007_230545_2092_trajF.lammpstrj
